5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4172/executions/1595_2895.log
== TEST (2019-03-21 21:17:35) 
-- CODE:
var1=int(input("quantidade de jogos: "))
valor=float("valor de cada jogo: ")
frete=int(input("valor do frete: ")

print(var1+valor+frete)
-- ERROR:
File "XXXX", line 5
    print(var1+valor+frete)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 21:18:23) 
-- CODE:
var1=int(input("quantidade de jogos: "))
valor=float("valor de cada jogo: ")
frete=int(input("valor do frete: ")


-- ERROR:
File "XXXX", line 5
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 21:18:33) 
-- CODE:
var1=int(input("quantidade de jogos: "))
valor=float("valor de cada jogo: ")
frete=int(input("valor do frete: ")
-- ERROR:
File "XXXX", line 4
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 21:18:59) 
-- CODE:
var1=int(input("quantidade de jogos: "))
valor=float("valor de cada jogo: ")
frete=int(input("valor do frete: "))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor=float("valor de cada jogo: ")
ValueError: could not convert string to float: 'valor de cada jogo: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 21:19:24) 
-- CODE:
var1=int(input("quantidade de jogos: "))
valor=float("valor de cada jogo: ")
frete=int(input("valor do frete: "))
-- EXECUTION TIME:
0.119862
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2895/main.py", line 2, in <module>
    valor=float("valor de cada jogo: ")
ValueError: could not convert string to float: 'valor de cada jogo: '

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 21:20:41) 
-- CODE:
var1=int(input("quantidade de jogos: "))
valor=input("valor unitario de cada jogo: ")
frete=int(input("valor do frete: "))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    frete=int(input())
ValueError: invalid literal for int() with base 10: '78.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 21:21:38) 
-- CODE:
var1=int(input("quantidade de jogos: "))
valor=input("valor unitario de cada jogo: ")
frete=int(input("valor do frete: "))
print(var1+valor+frete)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    frete=int(input())
ValueError: invalid literal for int() with base 10: '78.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 21:26:39) 
-- CODE:
var1=int(input("quantidade de jogos: "))
valor=int(input("valor unitario de cada jogo: "))
frete=int(input("valor do frete: "))

float(va1+valor+frete)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor=int(input())
ValueError: invalid literal for int() with base 10: '45.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 21:27:15) 
-- CODE:
var1=int(input("quantidade de jogos: "))
valor=int(input("valor unitario de cada jogo: "))
frete=int(input("valor do frete: "))

float(var1+valor+frete)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor=int(input())
ValueError: invalid literal for int() with base 10: '45.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 21:27:44) 
-- CODE:
var1=int(input("quantidade de jogos: "))
valor=int(input("valor unitario de cada jogo: "))
frete=int(input("valor do frete: "))

float(var1+valor+frete)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor=int(input())
ValueError: invalid literal for int() with base 10: '45.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 21:27:55) 
-- CODE:
var1=int(input("quantidade de jogos: "))
valor=int(input("valor unitario de cada jogo: "))
frete=int(input("valor do frete: "))

float(var1+valor+frete)


-- EXECUTION TIME:
0.121653
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2895/main.py", line 2, in <module>
    valor=int(input())
ValueError: invalid literal for int() with base 10: '45.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 21:29:32) 
-- CODE:
var1=int(input("quantidade de jogos: "))
valor=int(input("valor unitario de cada jogo: "))
frete=int(input("valor do frete: "))

float((var1*valor)+frete)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor=int(input())
ValueError: invalid literal for int() with base 10: '45.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 21:30:12) 
-- CODE:
var1=int(input("quantidade de jogos: "))
valor=int(input("valor unitario de cada jogo: "))
frete=int(input("valor do frete: "))

print((var1*valor)+frete))


-- ERROR:
File "XXXX", line 5
    print((var1*valor)+frete))
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 21:30:26) 
-- CODE:
var1=int(input("quantidade de jogos: "))
valor=int(input("valor unitario de cada jogo: "))
frete=int(input("valor do frete: "))

print((var1*valor)+frete)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor=int(input())
ValueError: invalid literal for int() with base 10: '45.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 21:30:39) 
-- CODE:
var1=int(input("quantidade de jogos: "))
valor=int(input("valor unitario de cada jogo: "))
frete=int(input("valor do frete: "))

print((var1*valor)+frete)


-- EXECUTION TIME:
0.25371
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2895/main.py", line 2, in <module>
    valor=int(input())
ValueError: invalid literal for int() with base 10: '45.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 21:31:18) 
-- CODE:
var1=int(input("quantidade de jogos: "))
valor=int(input("valor unitario de cada jogo: "))
frete=int(input("valor do frete: "))

print((var1*valor)+frete)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor=int(input())
ValueError: invalid literal for int() with base 10: '45.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 21:31:18) 
-- CODE:
var1=int(input("quantidade de jogos: "))
valor=int(input("valor unitario de cada jogo: "))
frete=int(input("valor do frete: "))

print((var1*valor)+frete)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor=int(input())
ValueError: invalid literal for int() with base 10: '45.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 21:31:18) 
-- CODE:
var1=int(input("quantidade de jogos: "))
valor=int(input("valor unitario de cada jogo: "))
frete=int(input("valor do frete: "))

print((var1*valor)+frete)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor=int(input())
ValueError: invalid literal for int() with base 10: '45.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 21:31:18) 
-- CODE:
var1=int(input("quantidade de jogos: "))
valor=int(input("valor unitario de cada jogo: "))
frete=int(input("valor do frete: "))

print((var1*valor)+frete)


-- EXECUTION TIME:
0.159439
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2895/main.py", line 2, in <module>
    valor=int(input())
ValueError: invalid literal for int() with base 10: '45.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 21:31:40) 
-- CODE:
var1=int(input("quantidade de jogos: "))
valor=int(input("valor unitario de cada jogo: "))
frete=int(input("valor do frete: "))

print((var1*valor)+frete)


-- EXECUTION TIME:
0.152422
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2895/main.py", line 2, in <module>
    valor=int(input())
ValueError: invalid literal for int() with base 10: '45.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 21:34:33) 
-- CODE:
var1=int(input("quantidade de jogos: "))
valor=float(input("valor de cada jogo: "))
frete=float(input("valor do frete: "))

print((var1*valor)+frete)


-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 21:34:48) 
-- CODE:
var1=int(input("quantidade de jogos: "))
valor=float(input("valor de cada jogo: "))
frete=float(input("valor do frete: "))

print((var1*valor)+frete)


-- EXECUTION TIME:
0.157613
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 12:38:32) 
-- CODE:
x=float(input("qunatioda de jogos: "))
y=float(input("valor do jogo: "))
z=float(input("frete: "))

print(x*y+z)
-- EXECUTION TIME:
0.182139
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
